--- a/style.css
+++ b/style.css
@@ -392,6 +392,7 @@ li {
 @media (max-width: 431px) {
     body {
         padding: 1rem;
+        text-align: center;
 
     }
     .head,
@@ -415,6 +416,7 @@ li {
     }
     #Acceuil {
         margin: 0;
+        margin-top: 5rem;
     }
     #Acceuil .bienvenue {
         padding: 10px 0;
