--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ html {
 
 .head {
     font-weight: bold;
-    margin: 1rem 5rem;
-    padding: 1rem;
+    padding: 1rem 3rem;
+    padding-bottom: 10rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 100%;
 }
 
 .head h1 {
@@ -30,22 +31,26 @@ span {
     align-items: center;
     text-align: center;
     font-size: 1.5rem;
+    max-width: 100%;
 }
 
 .menu {
     list-style: none;
     display: flex;
     align-items: center;
+    max-width: 100%;
 }
 
 li {
     padding-left: 15px;
     padding-right: 15px;
+    max-width: 100%;
 }
 
 .nav-bar .menu li a {
     text-decoration: none;
     color: black;
+    max-width: 100%;
 }
 
 .nav-bar .menu li a:hover {
@@ -71,13 +76,17 @@ li {
 #Acceuil {
     display: flex;
     justify-content: space-between;
-    margin: 2rem 5rem;
+    gap: 10px;
+    padding: 2rem 3rem;
     align-items: center;
+    max-width: 100%;
 }
 
 #Acceuil .bienvenue {
     padding: 10px;
     line-height: 1.9rem;
+    max-width: 60%;
+    padding-bottom: 10rem;
 }
 
 #Acceuil .bienvenue h1 {
@@ -88,12 +97,12 @@ li {
 
 #Acceuil .bienvenue p {
     font-size: 1.2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
+    max-width: 100%;
 }
 
 #Acceuil .bienvenue .buy, .voir {
     padding: 10px;
-    margin: 10px 0;
     background-color: teal;
     color: white;
     font-size: 1rem;
@@ -106,11 +115,17 @@ li {
     transition: 0.5s;
 }
 
+#Acceuil .card {
+    max-width: 40%;
+    display: block;
+    text-align: center;
+    
+}
+
 #Acceuil img {
     top: 0;
-    width: 600px;
-    height: 600px;
     transition: transform 0.5s ease;
+    max-width: 100%;
 }
 
 #Acceuil  img:hover {
@@ -119,33 +134,44 @@ li {
 #Actualités {
     display: block;
     padding: 10px;
+    max-width: 100%;
 }
 
 #Actualités h1 {
     text-align: center;
     font-size: 1.8rem;
     padding-bottom: 15px;
+    padding-top: 10px;
 }
 
 #Actualités .actu {
     display: grid;
-    grid-template-columns: repeat(3, 370px);
-    gap: 20px;
+    grid-template-columns: repeat(3, 400px);
+    gap: 60px;
     justify-content: center;
     align-items: center;
-    padding: 15px 0;
+    padding: 25px 0;
+    max-width: 100%;
 }
 
 .actu .box {
     text-align: center;
     border: solid 1px black;
     border-radius: 15px;
+    max-width: 100%;
+    padding: 5px;
+    padding-bottom: 20px;
+}
+
+.box p {
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .box img {
-    width: 370px;
-    height: 300px;
+    max-width: 100%;
     padding: 5px;
+    padding-bottom: 15px;
     border-radius: 15px;
     transition: transform 0.5s ease;
 }
@@ -156,7 +182,6 @@ li {
 
 #Actualités .actu .box .buy, .voir {
     padding: 10px;
-    margin: 10px 0;
     background-color: teal;
     color: white;
     font-size: 1rem;
@@ -188,21 +213,22 @@ li {
 }
 
 #follow {
-    display: block;
     text-align: center;;
-    margin: 10rem 0;
+    padding: 10rem 0;
 }
 
 #follow h1 {
     text-align: center;
-    margin: 2rem;
+    padding: 2rem;
 }
 
 
 #follow .Contact {
-    display: flex;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 400px);
     justify-content: center;
+    justify-items: center;
+    gap: 60px;
     align-items: center;
 }
 
@@ -210,15 +236,18 @@ li {
     border: solid 1px black;
     border-radius: 15px;
     text-align: center;
-    width: 370px;
-    padding: 5px;
+    justify-content: center;
+    justify-items: center;
+    max-width: 100%;
+    padding: 10px;
 }
 
 
 #follow .Contact .contacter img  {
     border-radius: 15px;
     transition: transform 0.5s ease;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
+    max-width: 100%;
 }
 
 
@@ -230,6 +259,15 @@ li {
 
 #follow .Contact .contacter a img  {
     border-radius: 0;
+    max-width: 50px;
+}
+
+
+#follow .Contact .contacter .suivre  {
+display: flex;
+max-width: 50%;
+padding: 15px 0;
+
 }
 
 #follow .Contact .contacter .suivre img  {
@@ -250,6 +288,7 @@ li {
 #apropos .compagnie,
 .services, h2 {
     padding-bottom: 1.5rem;
+    max-width: 100%;
 }
 
 #apropos .compagnie,
@@ -260,11 +299,10 @@ li {
 
 #foot {
     display: flex;
-    gap: 10px;
+    text-align: center;
     justify-content: center;
     padding: 1.5rem 0;
-    background-color: rgba(0, 128, 128, 0.51);
-    color: white;
+    color: gray;
 }
 
 #foot a {
@@ -279,69 +317,147 @@ li {
 }
 
 
-@media (max-width: 1281px) {
 
-.head {
-    margin: 1rem;
-}
-    #Acceuil {
-        margin: 5rem 1rem;
-        padding-bottom: 1rem;
-    }
-    #Acceuil img {
-        top: 0;
-        width: 400px;
-        height: 400px;
-    }
-
-}
 
 @media (max-width: 1200px) {
    
-#follow .Contact {
-    display: grid;
-    grid-template-columns: repeat(2, 370px);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    padding: 15px 0;
-}
+
     
 }
 
-@media (max-width: 911px) {
 
-    #Acceuil {
-        display: block;
+@media (max-width: 1350px) {
+    #Actualités .actu {
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(2, 400px);
     }
-    #Acceuil img {
-    
-        top: 0;
-        width: 400px;
-        height: 400px;
+    #follow .Contact {
+        display: grid;
+        grid-template-columns: repeat(3, 350px);
+        gap: 30px;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 0;
     }
+
 }
+
+@media (max-width: 1281px) {
+
+    .head {
+        padding: 1rem;
+    }
+        #Acceuil {
+            padding: 5rem 1rem;
+            padding-bottom: 1rem;
+        }
+        #Acceuil img {
+            top: 0;
+            max-width: 100%;
+        }
+    
+    }
+
+    @media (max-width: 1250px) {
+        #follow .Contact {
+            display: grid;
+            grid-template-columns: repeat(3, 350px);
+        }
+    }
+
+    @media (max-width: 1145px) {
+        #follow .Contact {
+            display: grid;
+            grid-template-columns: repeat(3, 300px);
+        }
+    }
+
+    @media (max-width: 997px) {
+        
+        #follow .Contact {
+            display: grid;
+            grid-template-columns: repeat(1, 400px);
+        }
+
+        #follow {
+            padding-top: 5rem;
+        }
+    }
+
+
+    @media (max-width: 911px) {
+
+        #Acceuil {
+            display: block;
+            
+        }
+        #Acceuil .bienvenue {
+            max-width: 100%;
+        }
+    
+        #Acceuil .card {
+            text-align: center;
+            max-width: 100%;
+        }
+    
+        #Acceuil img {
+        
+            top: 0;
+            max-width: 80%;
+        }
+    
+    }
+
+
+    
 @media (max-width: 900px) {
     .head {
-        margin: 1rem;
+        padding: 1rem;
+    }
+
+    #follow .Contact {
+        display: grid;
+        grid-template-columns: repeat(1, 400px);
+        gap: 10px;
+    }
+
+    #Acceuil {
+        padding-bottom: 3rem;
+    }
+
+    #Acceuil .bienvenue {
+        padding-bottom: 2rem;
+    }
+
+    #Acceuil .card {
+        padding-top: 1rem;
     }
      
 }
-@media (max-width: 1315px) {
-    #Actualités .actu {
-        display: grid;
-        grid-template-columns: repeat(2, 400px);
+
+
+@media (max-width: 857px) {
+
+    #apropos {
+        display: block;
     }
 
+    #apropos .compagnie {
+        padding-bottom: 4rem;
+    }
 }
 
 @media (max-width: 835px) {
     #Actualités .actu {
         display: grid;
-        grid-template-columns: repeat(2, 370px);
+        gap: 20px;
+        grid-template-columns: repeat(2, 400px);
     }
 
 }
+
+
 
 @media (max-width: 780px) {
 
@@ -356,16 +472,6 @@ li {
     }
 }
 
-@media (max-width: 857px) {
-
-    #apropos {
-        display: block;
-    }
-
-    #apropos .compagnie {
-        padding-bottom: 4rem;
-    }
-}
 
 @media (max-width: 720px) {
     .head .nav-bar .menu {
@@ -387,22 +493,42 @@ li {
     width: 25px;
     height: 25px;
 }
+
+#Acceuil .bienvenue h1 {
+    font-size: 1.8rem;
 }
 
-@media (max-width: 431px) {
-    body {
-        padding: 1rem;
-        text-align: center;
+#Acceuil .bienvenue p {
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+}
 
+}
+
+@media (max-width: 500px) {
+    #apropos {
+        padding: 0 30px;
     }
-    .head,
-    #Accueil,
-    #Actualités,
-    #Contact,
-    #apropos,
-    #foot {
-        margin: 0;
-        padding: 0;
+
+    #Acceuil {
+        padding-bottom: 5rem;
+    }
+
+    #Acceuuil .bienvenue {
+        padding: 0 1rem;
+    }
+
+
+}
+
+@media (max-width: 432px) {
+
+
+    
+
+    .head {
+        padding: 1rem;
+        padding-bottom: 1.5rem;
     }
     .head .nav-bar .menu {
         font-size: 0.8rem;
@@ -415,15 +541,18 @@ li {
         font-size: 0.7rem;
     }
     #Acceuil {
-        margin: 0;
-        margin-top: 5rem;
+        padding-top: 2rem;
+        padding-left: 0;
+        padding-right: 0;
+        
     }
     #Acceuil .bienvenue {
-        padding: 10px 0;
+    padding: 0 0.5rem;
+        padding-top: 10px;
     }
     #Acceuil .bienvenue h1 {
         font-size: 1.5rem;
-        padding-bottom: 1rem;
+        padding-bottom: 0.5rem;
     }
 
     #Acceuil .bienvenue p {
@@ -438,6 +567,16 @@ li {
     border-radius: 3px;
 }
 
+#Actualités .actu {
+    display: grid;
+    grid-template-columns: repeat(1, 350px);
+}
+
+#follow .Contact {
+    display: grid;
+    grid-template-columns: repeat(1, 350px);
+}
+
 #Actualités h1 {
     font-size: 1.5rem;
     padding-bottom: 10px;
@@ -445,7 +584,11 @@ li {
 
 #foot {
     display: block;
-    text-align: center;
+    
+}
+
+#apropos {
+    padding: 0 20px;
 }
 }
 
